--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image:url( file:///C:/Users/Admin/Downloads/pexels-photo-220072.webp);
+    background-image:url( photo3.webp);
     background-color: #f0e6f6;
     font-family: 'Arial', sans-serif;
     text-align: center;
